Changed gitIgnore folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 error.log
 # to ignore the file whose extension is .log
 *.log
+#if you want to make directory to ignore which is only current folder use / before name like ignore the directory which is in current folder
+#or if you want to ignor the all directory of same name then don't use / before it, it will assume as all folder be ignored
 ignoring Dir
